changed profiles from an ArrayList<Profile> to a HashMap<String, Profile> in Database, started writing ChatServer